[package]
name = "mush"
version = "0.1.0"
edition = "2021"
authors = ["Cyril Moron <cyril.moron@gmail.com>"]
description = "Outil CLI pour scaffolder et exécuter des solutions Advent of Code"
repository = "https://github.com/cmoron/aoc-rustdolph"
license = "MIT"
keywords = ["advent-of-code", "cli", "scaffolding"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
dotenvy = "0.15"
anyhow = "1.0.71"
chrono = { version = "0.4" }
idna = "1.0"  # Force version 1.0+ pour corriger RUSTSEC-2024-0421

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
serial_test = "3.0"
